@@ -59,7 +59,6 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -247,7 +246,7 @@ public class BatchSetRemovalTimeTest {
     List<String> deploymentIds = engineRule.getRepositoryService().createDeploymentQuery()
         .list().stream()
         .map(org.operaton.bpm.engine.repository.Deployment::getId)
-        .collect(Collectors.toList());
+        .toList();
 
     // when
     Batch batch = historyService.setRemovalTimeToHistoricProcessInstances()
@@ -292,7 +291,7 @@ public class BatchSetRemovalTimeTest {
     List<String> deploymentIds = engineRule.getRepositoryService().createDeploymentQuery()
         .list().stream()
         .map(org.operaton.bpm.engine.repository.Deployment::getId)
-        .collect(Collectors.toList());
+        .toList();
 
     // when
     Batch batch = historyService.setRemovalTimeToHistoricDecisionInstances()
@@ -1988,12 +1987,12 @@ public class BatchSetRemovalTimeTest {
   @Test
   public void shouldThrowBadUserRequestException_NotExistingIds() {
     // given
+    var setRemovalTimeToHistoricProcessInstancesBuilder = historyService.setRemovalTimeToHistoricProcessInstances()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byIds("aNotExistingId", "anotherNotExistingId");
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricProcessInstances()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byIds("aNotExistingId", "anotherNotExistingId")
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricProcessInstancesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicProcessInstances is empty");
   }
@@ -2044,12 +2043,12 @@ public class BatchSetRemovalTimeTest {
   @Test
   public void shouldThrowBadUserRequestExceptionForStandaloneDecision_NotExistingIds() {
     // given
+    var setRemovalTimeToHistoricDecisionInstancesBuilder = historyService.setRemovalTimeToHistoricDecisionInstances()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byIds("aNotExistingId", "anotherNotExistingId");
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricDecisionInstances()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byIds("aNotExistingId", "anotherNotExistingId")
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricDecisionInstancesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicDecisionInstances is empty");
   }
@@ -2095,12 +2094,12 @@ public class BatchSetRemovalTimeTest {
   @Test
   public void shouldThrowBadUserRequestExceptionForBatch_NotExistingIds() {
     // given
+    var setRemovalTimeToHistoricBatchesBuilder = historyService.setRemovalTimeToHistoricBatches()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byIds("aNotExistingId", "anotherNotExistingId");
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricBatches()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byIds("aNotExistingId", "anotherNotExistingId")
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricBatchesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicBatches is empty");
   }
@@ -2109,12 +2108,12 @@ public class BatchSetRemovalTimeTest {
   public void shouldThrowBadUserRequestException() {
     // given
     HistoricProcessInstanceQuery query = historyService.createHistoricProcessInstanceQuery();
+    var setRemovalTimeToHistoricProcessInstancesBuilder = historyService.setRemovalTimeToHistoricProcessInstances()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricProcessInstances()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byQuery(query)
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricProcessInstancesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicProcessInstances is empty");
   }
@@ -2123,12 +2122,12 @@ public class BatchSetRemovalTimeTest {
   public void shouldThrowBadUserRequestExceptionForStandaloneDecision() {
     // given
     HistoricDecisionInstanceQuery query = historyService.createHistoricDecisionInstanceQuery();
+    var setRemovalTimeToHistoricDecisionInstancesBuilder = historyService.setRemovalTimeToHistoricDecisionInstances()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricDecisionInstances()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byQuery(query)
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricDecisionInstancesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicDecisionInstances is empty");
   }
@@ -2137,12 +2136,12 @@ public class BatchSetRemovalTimeTest {
   public void shouldThrowBadUserRequestExceptionForBatch() {
     // given
     HistoricBatchQuery query = historyService.createHistoricBatchQuery();
+    var setRemovalTimeToHistoricBatchesBuilder = historyService.setRemovalTimeToHistoricBatches()
+      .absoluteRemovalTime(REMOVAL_TIME)
+      .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> historyService.setRemovalTimeToHistoricBatches()
-        .absoluteRemovalTime(REMOVAL_TIME)
-        .byQuery(query)
-        .executeAsync())
+    assertThatThrownBy(setRemovalTimeToHistoricBatchesBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("historicBatches is empty");
   }
@@ -2238,7 +2237,7 @@ public class BatchSetRemovalTimeTest {
       .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("removalTime is null");
   }
@@ -2252,7 +2251,7 @@ public class BatchSetRemovalTimeTest {
       .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("removalTime is null");
   }
@@ -2266,7 +2265,7 @@ public class BatchSetRemovalTimeTest {
       .byQuery(query);
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("removalTime is null");
   }
@@ -2279,7 +2278,7 @@ public class BatchSetRemovalTimeTest {
       .absoluteRemovalTime(new Date());
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("Neither query nor ids provided.");
   }
@@ -2292,7 +2291,7 @@ public class BatchSetRemovalTimeTest {
       .absoluteRemovalTime(new Date());
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("Neither query nor ids provided.");
   }
@@ -2305,7 +2304,7 @@ public class BatchSetRemovalTimeTest {
       .absoluteRemovalTime(new Date());
 
     // when/then
-    assertThatThrownBy(() -> batchBuilder.executeAsync())
+    assertThatThrownBy(batchBuilder::executeAsync)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("Neither query nor ids provided.");
   }
@@ -2540,7 +2539,7 @@ public class BatchSetRemovalTimeTest {
     builder.calculatedRemovalTime();
 
     // when/then
-    assertThatThrownBy(() -> builder.clearedRemovalTime())
+    assertThatThrownBy(builder::clearedRemovalTime)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
@@ -2550,9 +2549,10 @@ public class BatchSetRemovalTimeTest {
     // given
     SetRemovalTimeSelectModeForHistoricProcessInstancesBuilder builder = historyService.setRemovalTimeToHistoricProcessInstances();
     builder.calculatedRemovalTime();
+    Date removalTime = new Date();
 
     // when/then
-    assertThatThrownBy(() -> builder.absoluteRemovalTime(new Date()))
+    assertThatThrownBy(() -> builder.absoluteRemovalTime(removalTime))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
@@ -2564,7 +2564,7 @@ public class BatchSetRemovalTimeTest {
     builder.calculatedRemovalTime();
 
     // when/then
-    assertThatThrownBy(() -> builder.clearedRemovalTime())
+    assertThatThrownBy(builder::clearedRemovalTime)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
@@ -2574,9 +2574,10 @@ public class BatchSetRemovalTimeTest {
     // given
     SetRemovalTimeSelectModeForHistoricDecisionInstancesBuilder builder = historyService.setRemovalTimeToHistoricDecisionInstances();
     builder.calculatedRemovalTime();
+    Date removalTime = new Date();
 
     // when/then
-    assertThatThrownBy(() -> builder.absoluteRemovalTime(new Date()))
+    assertThatThrownBy(() -> builder.absoluteRemovalTime(removalTime))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
@@ -2588,7 +2589,7 @@ public class BatchSetRemovalTimeTest {
     builder.calculatedRemovalTime();
 
     // when/then
-    assertThatThrownBy(() -> builder.clearedRemovalTime())
+    assertThatThrownBy(builder::clearedRemovalTime)
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
@@ -2598,9 +2599,10 @@ public class BatchSetRemovalTimeTest {
     // given
     SetRemovalTimeSelectModeForHistoricBatchesBuilder builder = historyService.setRemovalTimeToHistoricBatches();
     builder.calculatedRemovalTime();
+    Date removalTime = new Date();
 
     // when/then
-    assertThatThrownBy(() -> builder.absoluteRemovalTime(new Date()))
+    assertThatThrownBy(() -> builder.absoluteRemovalTime(removalTime))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("The removal time modes are mutually exclusive: mode is not null");
   }
